# proyecto-1-so

./: CMakeLists.txt  README.md  a.out  log.txt  main  main.c
Archivos/: Archivo.h  ganadores.txt  log.txt
Listas/: ListaFichas.h  ListaJugador.h  ListaMesa.h  ListaPosibles.h  NodoFichas.h  NodoJugador.h  NodoMesa.h  NodoPosibles.h
Negocio/: LogicaJuego.h
Sonidos/: Sonido.h
